new repo setup-2

--- a/.github/workflows/dev-storage.yml
+++ b/.github/workflows/dev-storage.yml
@@ -2,7 +2,7 @@ name: Terraform Dev Storage
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths:
       - 'infra/envs/dev/**'
       - '.github/workflows/dev-storage.yml'
