--- a/.github/workflows/dev-storage.yml
+++ b/.github/workflows/dev-storage.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
     paths:
-      - 'envs_2/dev/blob_1/**'
+      - 'envs/dev/blob_1/**'
       - '.github/workflows/dev-storage.yml'
   workflow_dispatch: {}
 
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: envs_2/dev/blob_1
+        working-directory: envs/dev/blob_1
 
     steps:
       - name: Checkout
