--- a/.github/workflows/dev-storage.yml
+++ b/.github/workflows/dev-storage.yml
@@ -52,7 +52,7 @@ jobs:
         run: terraform plan -out=tfplan
 
       - name: Terraform apply
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/master'
         env:
           ARM_TENANT_ID:       ${{ secrets.AZURE_TENANT_ID }}
           ARM_CLIENT_ID:       ${{ secrets.AZURE_CLIENT_ID }}
